@@ -79,7 +79,7 @@
       </button>
       <span class="navbar-brand">
         <a class="navbar-link" href="index.html">finbif</a>
-        <span class="version label label-default" data-toggle="tooltip" data-placement="bottom" title="Released version">0.6.0</span>
+        <span class="version label label-default" data-toggle="tooltip" data-placement="bottom" title="Released version">0.6.0.9000</span>
       </span>
     </div>
 
@@ -149,12 +149,12 @@
       <small class="dont-index">Source: <a href='https://github.com/luomus/finbif/blob/master/inst/CITATION'><code>inst/CITATION</code></a></small>
     </div>
 
-    <p>Morris, William K. (2021). Introduction to the finbif package. R package version 0.6.0, https://doi.org/10.5281/zenodo.3612814</p>
+    <p>Morris, William K. (2021). Introduction to the finbif package. R package version 0.6.0.9000, https://doi.org/10.5281/zenodo.3612814</p>
     <pre>@Manual{,
   title = {Introduction to the finbif package},
   author = {William K. Morris},
   year = {2021},
-  note = {R package version 0.6.0},
+  note = {R package version 0.6.0.9000},
   url = {https://luomus.github.io/finbif/articles/finbif.html},
   doi = {10.5281/zenodo.3612814},
 }</pre>
