@@ -48,7 +48,7 @@
       </button>
       <span class="navbar-brand">
         <a class="navbar-link" href="index.html">finbif</a>
-        <span class="version label label-default" data-toggle="tooltip" data-placement="bottom" title="Released version">0.6.0</span>
+        <span class="version label label-default" data-toggle="tooltip" data-placement="bottom" title="Released version">0.6.0.9000</span>
       </span>
     </div>
 
@@ -183,7 +183,7 @@
 <p>Data from FinBIF comes from many sources. For information on citing FinBIF itself and the contributed datasets please visit this link:</p>
 <p><a href="https://laji.fi/en/about/2986" class="uri">https://laji.fi/en/about/2986</a></p>
 <p>To cite the finbif R package in publications please use:</p>
-<p>Morris, William K. (2021). Introduction to the finbif package. R package version 0.6.0, <a href="https://doi.org/10.5281/zenodo.3612814" class="uri">https://doi.org/10.5281/zenodo.3612814</a></p>
+<p>Morris, William K. (2021). Introduction to the finbif package. R package version 0.6.0.9000, <a href="https://doi.org/10.5281/zenodo.3612814" class="uri">https://doi.org/10.5281/zenodo.3612814</a></p>
 <hr>
 </div>
 <div id="contributing" class="section level2">
